prevented fonts breaking on mobile

--- a/src/components/Output/Output.module.css
+++ b/src/components/Output/Output.module.css
@@ -12,10 +12,3 @@
   height: auto;
   white-space: pre-wrap;
 }
-
-
-@media (max-width: 600px) {
-  .log {
-    white-space: pre-line;
-  }
-}
